Transform, ChatMessage 서버->클라이언트

--- a/MMOServer/MMOServer.vcxproj
+++ b/MMOServer/MMOServer.vcxproj
@@ -147,11 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Area.h" />
     <ClInclude Include="ConstValue.h" />
     <ClInclude Include="Link.h" />
     <ClInclude Include="ReadyServer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Area.cpp" />
     <ClCompile Include="Link.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadyServer.cpp" />
