--- a/MMOServer/MMOServer.vcxproj
+++ b/MMOServer/MMOServer.vcxproj
@@ -148,12 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Area.h" />
+    <ClInclude Include="AreaManager.h" />
     <ClInclude Include="ConstValue.h" />
     <ClInclude Include="Link.h" />
     <ClInclude Include="ReadyServer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Area.cpp" />
+    <ClCompile Include="AreaManager.cpp" />
     <ClCompile Include="Link.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadyServer.cpp" />
