--- a/MMOServer/MMOServer.vcxproj
+++ b/MMOServer/MMOServer.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Area.h" />
     <ClInclude Include="AreaManager.h" />
+    <ClInclude Include="CommandMap.h" />
     <ClInclude Include="ConstValue.h" />
     <ClInclude Include="EnumInfo.h" />
     <ClInclude Include="ErrorCode.h" />
@@ -157,16 +158,20 @@
     <ClInclude Include="RAII.h" />
     <ClInclude Include="ReadyServer.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="WorkThreadInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Area.cpp" />
     <ClCompile Include="AreaManager.cpp" />
+    <ClCompile Include="CommandMap.cpp" />
+    <ClCompile Include="ConstValue.cpp" />
     <ClCompile Include="ErrorCode.cpp" />
     <ClCompile Include="ErrorHandler.cpp" />
     <ClCompile Include="Link.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReadyServer.cpp" />
     <ClCompile Include="Util.cpp" />
+    <ClCompile Include="WorkThreadInfo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
